
[TestParsePatternNoErrors/BooleanLiteralFalse - 1]
&ast.LitPat{
    Lit: &ast.BoolLit{},
    span: 1:1-1:6,
}
---

[TestParsePatternNoErrors/StringLiteral - 1]
&ast.LitPat{
    Lit: &ast.StrLit{
        Value: "hello",
    },
    span: 1:1-1:8,
}
---

[TestParsePatternNoErrors/TuplePatternWithRest - 1]
&ast.TuplePat{
    Elems: []ast.Pat{
        &ast.IdentPat{
            Name: "a",
            span: 1:2-1:3,
        },
        &ast.IdentPat{
            Name: "b",
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 1:9-1:10,
                },
                span: 1:9-1:10,
            },
            span: 1:5-1:10,
        },
        &ast.RestPat{
            Pattern: &ast.IdentPat{
                Name: "rest",
                span: 1:15-1:19,
            },
            span: 1:12-1:19,
        },
    },
    span: 1:1-1:20,
}
---

[TestParsePatternNoErrors/Identifier - 1]
&ast.IdentPat{
    Name: "x",
    span: 1:1-1:2,
}
---

[TestParsePatternNoErrors/ExtractPattern - 1]
&ast.ExtractorPat{
    Name: &ast.Ident{
        Name: "Foo",
        span: 1:1-1:4,
    },
    Args: []ast.Pat{
        &ast.IdentPat{
            Name: "a",
            span: 1:5-1:6,
        },
        &ast.IdentPat{
            Name: "b",
            span: 1:8-1:9,
        },
    },
    span: 1:1-1:10,
}
---

[TestParsePatternNoErrors/BooleanLiteralTrue - 1]
&ast.LitPat{
    Lit: &ast.BoolLit{
        Value: true,
    },
    span: 1:1-1:5,
}
---

[TestParsePatternNoErrors/NullLiteral - 1]
&ast.LitPat{
    Lit: &ast.NullLit{},
    span: 1:1-1:5,
}
---

[TestParsePatternNoErrors/NumberLiteral - 1]
&ast.LitPat{
    Lit: &ast.NumLit{
        Value: 5,
    },
    span: 1:1-1:2,
}
---

[TestParsePatternNoErrors/Wildcard - 1]
&ast.WildcardPat{
    span: 1:1-1:2,
}
---

[TestParsePatternNoErrors/UndefinedLiteral - 1]
&ast.LitPat{
    Lit: &ast.UndefinedLit{},
    span: 1:1-1:10,
}
---

[TestParsePatternNoErrors/ObjectPatternWithRest - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "a",
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "b",
                span: 1:5-1:6,
            },
            Value: &ast.IdentPat{
                Name: "c",
                span: 1:8-1:9,
            },
            span: 1:5-1:9,
        },
        &ast.ObjRestPat{
            Pattern: &ast.IdentPat{
                Name: "rest",
                span: 1:14-1:18,
            },
            span: 1:11-1:18,
        },
    },
    span: 1:1-1:19,
}
---

[TestParsePatternNoErrors/ObjectPatternWithDefaults - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "a",
                span: 1:2-1:3,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 1:6-1:7,
                },
                span: 1:6-1:7,
            },
            span: 1:2-1:7,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "b",
                span: 1:9-1:10,
            },
            Value: &ast.IdentPat{
                Name: "c",
                Default: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span: 1:16-1:23,
                    },
                    span: 1:16-1:23,
                },
                span: 1:12-1:23,
            },
            span: 1:9-1:23,
        },
    },
    span: 1:1-1:24,
}
---

[TestParsePatternNoErrors/WildcardPattern - 1]
&ast.WildcardPat{
    span: 1:1-1:2,
}
---

[TestParsePatternNoErrors/RegexLiteral - 1]
&ast.LitPat{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
    },
    span: 1:1-1:9,
}
---

[TestParsePatternNoErrors/IdentifierWithTypeAnnotation - 1]
&ast.IdentPat{
    Name: "x",
    TypeAnn: &ast.NumberTypeAnn{
        span: 1:3-1:9,
    },
    span: 1:1-1:9,
}
---

[TestParsePatternNoErrors/IdentifierWithTypeAnnotationAndDefault - 1]
&ast.IdentPat{
    Name: "x",
    TypeAnn: &ast.NumberTypeAnn{
        span: 1:3-1:9,
    },
    Default: &ast.LiteralExpr{
        Lit: &ast.NumLit{
            Value: 5,
            span: 1:12-1:13,
        },
        span: 1:12-1:13,
    },
    span: 1:1-1:13,
}
---

[TestParsePatternNoErrors/ObjectPatternWithKeyValueAndInlineTypeAnnotations - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Value: &ast.IdentPat{
                Name: "a",
                TypeAnn: &ast.NumberTypeAnn{
                    span: 1:7-1:13,
                },
                span: 1:5-1:13,
            },
            span: 1:2-1:13,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:15-1:16,
            },
            Value: &ast.IdentPat{
                Name: "b",
                TypeAnn: &ast.StringTypeAnn{
                    span: 1:20-1:26,
                },
                span: 1:18-1:26,
            },
            span: 1:15-1:26,
        },
    },
    span: 1:1-1:27,
}
---

[TestParsePatternNoErrors/ObjectPatternWithKeyValueInlineTypeAnnotationsAndDefaults - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Value: &ast.IdentPat{
                Name: "a",
                TypeAnn: &ast.NumberTypeAnn{
                    span: 1:7-1:13,
                },
                Default: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        span: 1:16-1:17,
                    },
                    span: 1:16-1:17,
                },
                span: 1:5-1:17,
            },
            span: 1:2-1:17,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:19-1:20,
            },
            Value: &ast.IdentPat{
                Name: "b",
                TypeAnn: &ast.StringTypeAnn{
                    span: 1:24-1:30,
                },
                Default: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span: 1:33-1:40,
                    },
                    span: 1:33-1:40,
                },
                span: 1:22-1:40,
            },
            span: 1:19-1:40,
        },
    },
    span: 1:1-1:41,
}
---

[TestParsePatternNoErrors/ObjectPatternWithInlineTypeAnnotations - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:13-1:14,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 1:16-1:22,
            },
            span: 1:13-1:22,
        },
    },
    span: 1:1-1:23,
}
---

[TestParsePatternNoErrors/ObjectPatternWithInlineTypeAnnotationsAndDefaults - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:5-1:11,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    span: 1:14-1:15,
                },
                span: 1:14-1:15,
            },
            span: 1:2-1:15,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:17-1:18,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 1:20-1:26,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "hello",
                    span: 1:29-1:36,
                },
                span: 1:29-1:36,
            },
            span: 1:17-1:36,
        },
    },
    span: 1:1-1:37,
}
---

[TestParsePatternNoErrors/TuplePatternWithTypeAnnotations - 1]
&ast.TuplePat{
    Elems: []ast.Pat{
        &ast.IdentPat{
            Name: "x",
            TypeAnn: &ast.NumberTypeAnn{
                span: 1:4-1:10,
            },
            span: 1:2-1:10,
        },
        &ast.IdentPat{
            Name: "y",
            TypeAnn: &ast.StringTypeAnn{
                span: 1:14-1:20,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 1:23-1:24,
                },
                span: 1:23-1:24,
            },
            span: 1:12-1:24,
        },
    },
    span: 1:1-1:25,
}
---

[TestParsePatternNoErrors/InstancePattern - 1]
&ast.InstancePat{
    ClassName: &ast.Ident{
        Name: "Point",
        span: 1:1-1:6,
    },
    Object: &ast.ObjectPat{
        Elems: []ast.ObjPatElem{
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "x",
                    span: 1:8-1:9,
                },
                span: 1:8-1:9,
            },
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "y",
                    span: 1:11-1:12,
                },
                span: 1:11-1:12,
            },
        },
        span: 1:1-1:13,
    },
    span: 1:1-1:13,
}
---

[TestParsePatternNoErrors/NamespacedInstancePattern - 1]
&ast.InstancePat{
    ClassName: &ast.Member{
        Left: &ast.Ident{
            Name: "MyNamespace",
            span: 1:1-1:12,
        },
        Right: &ast.Ident{
            Name: "Point",
            span: 1:13-1:18,
        },
    },
    Object: &ast.ObjectPat{
        Elems: []ast.ObjPatElem{
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "x",
                    span: 1:20-1:21,
                },
                span: 1:20-1:21,
            },
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "y",
                    span: 1:23-1:24,
                },
                span: 1:23-1:24,
            },
        },
        span: 1:1-1:25,
    },
    span: 1:1-1:25,
}
---

[TestParsePatternNoErrors/NamespacedExtractPattern - 1]
&ast.ExtractorPat{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "MyNamespace",
            span: 1:1-1:12,
        },
        Right: &ast.Ident{
            Name: "Foo",
            span: 1:13-1:16,
        },
    },
    Args: []ast.Pat{
        &ast.IdentPat{
            Name: "a",
            span: 1:17-1:18,
        },
        &ast.IdentPat{
            Name: "b",
            span: 1:20-1:21,
        },
    },
    span: 1:1-1:22,
}
---

[TestParsePatternNoErrors/QualifiedExtractPatternNoArgs - 1]
&ast.ExtractorPat{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Option",
            span: 1:1-1:7,
        },
        Right: &ast.Ident{
            Name: "None",
            span: 1:8-1:12,
        },
    },
    span: 1:1-1:12,
}
---

[TestParsePatternNoErrors/ObjectPatternWithMutShorthand - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:6-1:7,
            },
            Mutable: true,
            span: 1:2-1:7,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:9-1:10,
            },
            span: 1:9-1:10,
        },
    },
    span: 1:1-1:11,
}
---

[TestParsePatternNoErrors/MutIdent - 1]
&ast.IdentPat{
    Name: "x",
    Mutable: true,
    span: 1:1-1:6,
}
---

[TestParsePatternNoErrors/MutIdentWithTypeAnnotation - 1]
&ast.IdentPat{
    Name: "x",
    Mutable: true,
    TypeAnn: &ast.NumberTypeAnn{
        span: 1:8-1:14,
    },
    span: 1:1-1:14,
}
---

[TestParsePatternNoErrors/ObjectPatternMixedMutShorthandAndKeyValue - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:6-1:7,
            },
            Mutable: true,
            span: 1:2-1:7,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:9-1:10,
            },
            Value: &ast.IdentPat{
                Name: "a",
                Mutable: true,
                span: 1:12-1:17,
            },
            span: 1:9-1:17,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "z",
                span: 1:19-1:20,
            },
            span: 1:19-1:20,
        },
    },
    span: 1:1-1:21,
}
---

[TestParsePatternNoErrors/ObjectPatternWithMutKeyValue - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Value: &ast.IdentPat{
                Name: "a",
                Mutable: true,
                span: 1:5-1:10,
            },
            span: 1:2-1:10,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 1:12-1:13,
            },
            Value: &ast.IdentPat{
                Name: "b",
                span: 1:15-1:16,
            },
            span: 1:12-1:16,
        },
    },
    span: 1:1-1:17,
}
---
